# xiaohongshu-skill

./: .gitignore  README.md  README.zh-CN.md  SKILL.md  activate.sh  glama.json  manifest.json  pyproject.toml  setup.sh
.github/workflows/: ci.yml
docs/: claude-code-integration.md  cli-guide.md
mcp/: start.sh
scripts/: account_manager.py  cdp_publish.py  chrome_launcher.py  feed_explorer.py  image_downloader.py  publish_pipeline.py  run_lock.py
src/xhs_cli/: __init__.py  main.py
src/xhs_cli/commands/: account.py  analytics.py  api_cmd.py  auth.py  config_cmd.py  init.py  interact.py  profile.py  publish.py  search.py  server.py
src/xhs_cli/engines/: cdp_client.py  mcp_client.py
src/xhs_cli/utils/: config.py  output.py
tests/: test_cli.py  test_config.py  test_envelope.py  test_export.py  test_index_cache.py
