[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xhs-cli"
version = "0.1.0"
description = "小红书命令行工具 — 发布、搜索、互动、数据分析"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Youhai" }]
keywords = ["xiaohongshu", "xhs", "redbook", "小红书", "cli"]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "requests>=2.28.0",
    "websockets>=12.0",
]

[project.scripts]
xhs = "xhs_cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/xhs_cli", "scripts"]
